docs: add docs and remove cicd release for now

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -12,7 +12,9 @@ run-name: upload callable_tm
 on:
   push:
     branches:
-      - main
+      - release/*
+
+# TODO: update the cicd and do publish only on release
 
 permissions:
   contents: read
