--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -19,11 +19,11 @@ jobs:
 
       - name: Install dependencies
         run: poetry install --without docs
-      
-      - name: Run tests
-        run: make test
 
-      - name: Add cov to codecov
-        uses: codecov/codecov-action@v3
+      - name: Run tests
+        run: poetry run pytest --cov --cov-branch --cov-report=xml
+
+      - name: Add coverage to codecov
+        uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
