--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-  steps:
+
+  jobs:
     post_create_environment:
       - pip install poetry
       - poetry config virtualenvs.create false
