--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "callable-tm"
 version = "0.1.0"
-description = ""
+description = "package that allows to implement functions that can join on current transaction"
 authors = [
     {name = "Johnathan Barbosa",email = "jbarbosa0504@gmail.com"}
 ]
@@ -10,6 +10,19 @@ requires-python = ">=3.12"
 dependencies = [
     "transaction (>=5.0,<6.0)"
 ]
+license = "GPL-3.0-or-later"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Operating System :: OS Independent",
+    "Development Status :: 5 - Production/Stable",
+    "Framework :: Zope",
+    "Natural Language :: English"
+]
+
+[tool.poetry.urls]
+"Docs" = "https://callable-tm.readthedocs.io/en/latest/"
+"Code" = "https://github.com/JohnathanBarb/callable_tm"
+"Issues" = "https://github.com/JohnathanBarb/callable_tm/issues"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
